repair bugs dashboard on mobile

--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -292,7 +292,7 @@
   
   }
 
-  @media screen and (max-height: 505px){
+  @media screen and (max-height: 800px){
 
     .dashboardContainerLeft {
       align-items: center;
@@ -306,6 +306,22 @@
       justify-content: flex-start;
     
     }
+
+    .chartContainer {
+      min-height: 200px;
+      width: 100%;
+     
+    
     }
+
+    .opinionBox{
+      min-height: 600px;
+      width: 100%;
+   
+     
+      
+    }
+    }
+
   
   
